borsh-schema-derive-internal/src/snapshots/borsh_schema_derive_internal__enum_schema__tests__check_with_funcs_skip_conflict.snap
---
source: borsh-schema-derive-internal/src/enum_schema.rs
expression: err
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(with_funcs(...))`",
)
